--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hellow World
+<html>
+  <head>
+    <title>Göran H, git content page</title>
+  </head>
+  <body>
+    <div class="wrapper">   
+      <div class="letter">G.H</div>
+        <div class="introtext">
+          <p>This is the landing page for my ramblings in code.</p>
+          <p> some useful, some less. </p>
+          <p> Creating as I go, completed some, others left for later,</p>
+          <p>always eager to learn more, creativity is my muse.
+        </div>
+      </div>
+    </div>
+    <div class="triangle"></div>
+  
+  </body>
+</html>
+
+    
