fixed style.css link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Göran H, git content page</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">   
