--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <title>Göran H, git content page</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="wrapper">   
+        <div class="triangle"></div>
+    <div class="parent">
+      <div class="div1">
       <div class="letter">G.H</div>
         <div class="introtext">
           <p>This is the landing page for my ramblings in code.</p>
@@ -13,9 +15,15 @@
           <p>always eager to learn more, creativity is my muse.
         </div>
       </div>
+      <div class="div2">
+
+        <p class="headerText">After a career as a teacher in ICT and programming using GIT for my students and             maintaining a youtube channel with video lessons, this is a fresh start. A chance to be         creative without the need to teach. Please feel free to browse below, if you find               anything useful, just copy it. No worries.</p><p id="headerTextSign"><span id="signature">/Göran</span> 8 nov 22</p>
+      </div>
+      <div class="div3">
+        Main 
+      </div>
     </div>
-    <div class="triangle"></div>
-  
+
   </body>
 </html>
 
